Opened 7 years ago

Closed 7 years ago

Last modified 7 years ago

#396 closed bug (fixed)

BSlider crash without window

Reported by: genki@… Owned by: axeld
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc:
Blocked By: Blocking:
Has a Patch: no Platform: All

Description (last modified by wkornewald)

Hi,

Starting Refraction for BeOS (beta 8) ends with this crash:

Thread 135 called debugger(): View method requires owner and doesn't have one.
Reading symbols from /boot/beos/system/lib/libbe.so...(no debugging symbols
found)...done.
Loaded symbols for /boot/beos/system/lib/libbe.so
<REMOVED>
Reading symbols from /boot/home/Refraction/Plug-Ins/Floaters/ColorFloater...done.
Loaded symbols for /boot/home/Refraction/Plug-Ins/Floaters/ColorFloater

[Switching to team ./Refraction (135) thread Refraction (135)]
0x006742ef in _kern_debugger () from /boot/beos/system/lib/libroot.so
(gdb) bt
#0 0x006742ef in _kern_debugger () from /boot/beos/system/lib/libroot.so
#1 0x0066f6bf in debugger () from /boot/beos/system/lib/libroot.so
#2 0x00589537 in BView::do_owner_check () from /boot/beos/system/lib/libbe.so
#3 0x005832c4 in BView::PushState () from /boot/beos/system/lib/libbe.so
#4 0x002bad1c in RGBSlider::DrawBar ()
#5 0x0057494b in BSlider::DrawSlider () from /boot/beos/system/lib/libbe.so
#6 0x002bb54a in RGBSlider::SetColors ()
#7 0x00a94290 in ColorView::UpdateSliders ()

from /boot/home/Refraction/Plug-Ins/Floaters/ColorFloater

#8 0x00a93e23 in ColorView::ColorView ()

from /boot/home/Refraction/Plug-Ins/Floaters/ColorFloater

#9 0x00a933a5 in ColorWindow::ColorWindow ()

from /boot/home/Refraction/Plug-Ins/Floaters/ColorFloater

#10 0x00a934e0 in instantiate_addon ()

from /boot/home/Refraction/Plug-Ins/Floaters/ColorFloater

#11 0x0026c441 in RefractionPool::AddFloater ()
#12 0x0026bf66 in RefractionPool::LoadFloaters ()
#13 0x00265d31 in RefractionPool::Init ()
#14 0x002515f2 in Refraction::Refraction ()
#15 0x0025135b in main ()
(gdb)

Adding this (inspired by #383)
Index: Slider.cpp
===================================================================
--- Slider.cpp (revision 16999)
+++ Slider.cpp (working copy)
@@ -716,6 +716,8 @@

void
BSlider::DrawSlider()
{

+ if (!Window())
+ return;

#if USE_OFF_SCREEN_VIEW

if (!fOffScreenBits)

return;

fixes the crash.

Now Refraction seems to quit after it has inited,
but that's probably another bug.

Change History (5)

comment:1 Changed 7 years ago by axeld

  • Resolution set to fixed

comment:2 Changed 7 years ago by axeld

Should be fixed with hrev17002. Can you confirm?

comment:3 Changed 7 years ago by axeld

  • Status changed from new to closed

comment:4 Changed 7 years ago by genki@…

Confirming fix.
No longer ends up in debugger.

comment:5 Changed 7 years ago by wkornewald

  • Description modified (diff)
  • Platform set to All
Note: See TracTickets for help on using tickets.