DrawSlider() now locks the looper - this should fix bug #396.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17002 a95241bf-73f2-0310-859d-f6bbb57e9c96